--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -13,7 +14,7 @@ body{
     padding-right: 20px;
     height: 60px;
     background-color: #2A2A2A;
-    opacity: 0.6;
+    opacity: 0.7;
 }
 .topimg1{
     width: 150px;
@@ -30,22 +31,42 @@ body{
     transform: translate(-50%,0);
 }
 .bookDiv{
+    width: 564px;
     margin: 0 auto;
     position: relative;
 }
 .book{
     width: 100%;
     height: 100%;
-    max-width: 450px;
-    max-height: 427px;
-    min-height: 335px;
-    min-width:350px ;
+    width: 450px;
+    height: 427px;
+
 }
 .create{
-    width: 45%;
+
+
+    max-width: 204px;
     height: 20%;
     position: absolute;
     bottom: 4%;
-    right: 17%;
+    left: 170px;
     cursor: pointer;
+}
+#record{
+    position: absolute;
+    top: 20px;
+    left: 200px;
+
+}
+#work{
+    position: absolute;
+    top: 200px;
+    left: -100px;
+
+}
+#study{
+    position: absolute;
+    top: -20px;
+    right: -100px;
+
 }
