--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,7 @@
+body{
+
+    overflow-y: hidden;
+}
 .left{
     width: 80px;
     height:80px;
@@ -6,6 +10,7 @@
     top: 50%;
     margin-top: -30px;
     cursor: pointer;
+    z-index: 10;
 }
 .right{
     width: 80px;
@@ -15,6 +20,7 @@
     margin-top: -30px;
     right: 20px;
     cursor: pointer;
+    z-index: 10;
 }
 .addTask,.editTask{
     position:absolute;
@@ -291,14 +297,14 @@ margin-top: -10px;
 }
 .addTask{
     display: none;
-    z-index: 5;
+    z-index: 20;
 }
 .getTask{
     display: none;
 }
 .deleteDiv{
     display: none;
-    z-index: 10;
+    z-index: 20;
 }
 .selected{
     display: none;
@@ -322,8 +328,12 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: transparent;
+    background-color: #000;
     opacity: 0.7;
     z-index: 12;
     display: none;
+}
+.circle{
+    cursor: pointer;
+    background-color: #fff;
 }
