--- a/CSS/login.css
+++ b/CSS/login.css
@@ -7,6 +7,10 @@ html,body{
     width: 100%;
     height: 100%;
 }
+body{
+    background-image: url('../img/work/login.png');
+    background-size: 100% 100%;
+}
 .main{
     width: 25%;
     margin: 0 auto;
