--- a/CSS/work.css
+++ b/CSS/work.css
@@ -4,7 +4,7 @@ html{
     margin: 0px;
     padding: 0px;
     font-size: 62.5%;
-    background:url(../img/work/bgc.png) no-repeat;
+    background:url(../img/background.png) no-repeat;
     background-size:100% 100%;
 }
 *{
